# KiraService

./: CHANGELOG.md  README.md  gradle.properties  kira.jks  settings.gradle
.github/workflows/: build.yml
KiraService_v55/: CHANGELOG.md  GOALS.md  settings.gradle
KiraService_v55/app/src/main/java/com/kira/service/: BootReceiver.java  FloatingWindowService.java  KiraForegroundService.java  KiraHeartbeat.java  KiraNotificationService.java  KiraWatcher.java  MainActivity.java
KiraService_v55/app/src/main/java/com/kira/service/ai/: KiraAI.java  KiraChain.java  KiraCheckpoint.java  KiraConfig.java  KiraMemory.java  KiraSkillEngine.java  KiraWorkflow.java
KiraService_v55/app/src/main/java/com/kira/service/ui/: GalaxyView.java  LightningView.java  NeonTextView.java  NeuralNavBar.java
KiraService_v55/app/src/main/res/layout/: fragment_history.xml  fragment_home.xml  fragment_tools.xml
KiraService_v55/app/src/main/res/xml/: accessibility_service_config.xml
KiraService_v55/rust-core/: Cargo.toml
KiraService_v55/rust-core/src/: state.rs
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/java/com/kira/service/: BootReceiver.java  CrashActivity.java  FloatingWindowService.java  KiraAccessibilityService.java  KiraApp.java  KiraEventBus.java  KiraForegroundService.java  KiraHeartbeat.java  KiraNotificationService.java  KiraOtaUpdater.java  KiraVoiceService.java  KiraWatcher.java  MainActivity.java  RustBridge.java  SetupActivity.java  ShizukuCommandService.java  ShizukuShell.java
app/src/main/java/com/kira/service/ai/: KiraAI.java  KiraAgent.java  KiraChain.java  KiraConfig.java  KiraMemory.java  KiraProactive.java  KiraSkillEngine.java  KiraTools.java  KiraVision.java
app/src/main/java/com/kira/service/telegram/: KiraTelegram.java
app/src/main/java/com/kira/service/ui/: GalaxyView.java  GodModeHalo.java
app/src/main/jni/: CMakeLists.txt  kira_jni.c
app/src/main/res/layout/: activity_main.xml  activity_setup.xml  fragment_history.xml  fragment_home.xml  fragment_settings.xml  fragment_tools.xml
app/src/main/res/values/: ids.xml  strings.xml
app/src/main/res/xml/: accessibility_service_config.xml  file_paths.xml  file_provider_paths.xml
rust-core/: Cargo.toml
rust-core/src/: app_packages.rs  http.rs  jni_bridge.rs  lib.rs  state.rs  utils.rs
rust-core/src/acp/: bus.rs  mod.rs  types.rs
rust-core/src/ai/: compaction.rs  failover.rs  mod.rs  models.rs  runner.rs  streaming.rs  subagents.rs  tools.rs
rust-core/src/automation/: mod.rs
rust-core/src/channels/: mod.rs  shared.rs  telegram.rs  whatsapp.rs
rust-core/src/gateway/: mod.rs  persistence.rs  routing.rs  security.rs  sessions.rs
rust-core/src/memory/: index.rs  mod.rs  search.rs
rust-core/src/scheduling/: cron.rs  mod.rs  webhooks.rs
rust-core/src/skills/: mod.rs
rust-core/src/tools/: device.rs  memory_tools.rs  mod.rs  system.rs
