[package]
name    = "kira-core"
version = "0.0.2"
edition = "2021"

[lib]
name       = "kira_core"
crate-type = ["cdylib"]

[dependencies]
# Core — pinned exact versions for reproducible Android builds
lazy_static = "1.5"
serde       = { version = "1.0", features = ["derive"] }
serde_json  = "1.0"

# NOTE: All other functionality (crypto, HTTP, JNI) uses stdlib only.
# Adding crates increases APK size and cross-compilation complexity.
# SHA256 in Java (KiraOtaUpdater), XOR obfuscation in Rust (derive_key).

[profile.release]
opt-level     = "z"       # minimise binary size for APK
lto           = true      # link-time optimisation
codegen-units = 1         # single codegen unit for max LTO benefit
panic         = "abort"   # no unwinding — reduces binary size ~30KB
strip         = true      # strip symbols from final .so
overflow-checks = true    # catch integer overflows in release too

[profile.dev]
opt-level       = 1
overflow-checks = true
