[package]
name    = "kira-core"
version = "0.1.7"          # Session 20: Streaming AI
edition = "2021"

[lib]
name       = "kira_core"
crate-type = ["cdylib"]

[dependencies]
lazy_static = "1.5"
serde       = { version = "1.0", features = ["derive"] }
serde_json  = "1.0"

# Safe JNI bindings
jni         = { version = "0.21", default-features = false }

# LZ4 compression (Session B)
lz4_flex    = { version = "0.11", default-features = false }

# AES-256-GCM encryption (Session C)
# alloc feature required for Aead trait + Vec<u8> ciphertext output
aes-gcm     = { version = "0.10", features = ["aes", "alloc"] }

# Pure-Rust TLS (Session K)
# std feature required for ClientConnection, Stream, and I/O integration
rustls           = { version = "0.23", features = ["ring", "tls12", "std"] }
rustls-pki-types = "1"
webpki-roots     = "0.26"

[profile.release]
opt-level     = "z"
lto           = "fat"
codegen-units = 1
panic         = "unwind"
strip         = true
overflow-checks = false

[profile.dev]
opt-level       = 1
overflow-checks = true
