[package]
name    = "kira-core"
version = "0.1.12"
edition = "2021"

[lib]
name       = "kira_core"
crate-type = ["cdylib"]

[dependencies]
# Core serialization
lazy_static  = "1.5"
serde        = { version = "1.0", features = ["derive"] }
serde_json   = "1.0"

# JNI bindings
jni          = { version = "0.21", default-features = false }

# Compression
lz4_flex     = { version = "0.11", default-features = false }

# Encryption (AES-256-GCM)
aes-gcm      = { version = "0.10", features = ["aes", "alloc"] }

# Pure-Rust TLS
rustls           = { version = "0.23", features = ["ring", "tls12", "std"] }
rustls-pki-types = "1"
webpki-roots     = "0.26"

# Base64 encoding/decoding (voice audio chunks, file transfers)
base64       = "0.22"

# Regular expressions (pattern matching for skills/triggers)
regex        = { version = "1.10", default-features = false, features = ["std"] }

# Time handling
chrono       = { version = "0.4", default-features = false, features = ["std", "clock"] }

# UUID generation (session IDs, memory keys)
uuid         = { version = "1.8", features = ["v4"] }

# SHA-256 hashing (webhook HMAC, memory dedup)
sha2         = "0.10"

# URL encoding/decoding (web search queries)
urlencoding  = "2.1"

# Random number generation
rand         = { version = "0.8", features = ["small_rng"] }

[profile.release]
opt-level     = "z"
lto           = "fat"
codegen-units = 1
panic         = "unwind"
strip         = true
overflow-checks = false

[profile.dev]
opt-level       = 1
overflow-checks = true
